Fix hero image bug on mobile

--- a/css/grid.css
+++ b/css/grid.css
@@ -29,7 +29,7 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -166,4 +166,10 @@ h4~p {
 
 #copyright {
     flex-basis: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+    .hero-container {
+        background-attachment: scroll;
+    }
 }
